--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -206,7 +206,7 @@
     "\n",
     "    # run api calls for each city in get_weather_api \n",
     "    # this step is skipped if the output_data_file already exists\n",
-    "    # delete output file and re-run to generate new cities and retreive weather data for new set of random cities\n",
+    "    # !!!!! DELETE CSV OUTPUT FILE to generate new cities and retreive weather data for new set of random cities\n",
     "    weather_rawdata = get_weather_api(cities)\n",
     "    weather_df = get_weather_dataframe(weather_rawdata)\n",
     "    \n",
