--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -271,7 +271,7 @@
        "[584 rows x 11 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,13 +314,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1ede729ee5d49fea1bc926f6e9a351d",
+       "model_id": "3ffe158a7ebb4262975b6bf657f77912",
        "version_major": 2,
        "version_minor": 0
       },
@@ -339,12 +339,21 @@
     "# Create heat layer\n",
     "heat_layer = gmaps.heatmap_layer(locations, weights=humidity, \n",
     "                                 dissipating=False, max_intensity=100,\n",
-    "                                 point_radius=2)\n",
+    "                                 point_radius=3)\n",
     "# Add layer\n",
     "fig.add_layer(heat_layer)\n",
     "\n",
     "# Display figure\n",
     "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.figs"
    ]
   },
   {
@@ -358,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +735,7 @@
        "544     -35.15        76.84            76.84        81           2        8.97  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +928,7 @@
        "      <td>170</td>\n",
        "      <td>Hotel Posada San Jose</td>\n",
        "      <td>Constitución, Centro, San Pedro Pochutla</td>\n",
-       "      <td>3.8</td>\n",
+       "      <td>3.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1050,7 +1059,7 @@
        "1                                             Rikitea           4.0  \n",
        "2                  RN 33 26 de Abril y, Venado Tuerto           4.7  \n",
        "3                       Rivadavia 2235, Mar del Plata           3.8  \n",
-       "4            Constitución, Centro, San Pedro Pochutla           3.8  \n",
+       "4            Constitución, Centro, San Pedro Pochutla           3.7  \n",
        "5                                               Yendi           2.8  \n",
        "6   Rodovia AL-101 Norte Km 124, s/n - Sitio Carió...           4.7  \n",
        "7   Ayensudo, Elmina. Accra-Takoradi Road at Brenu...           3.1  \n",
@@ -1098,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1231,7 @@
        "      <td>4.14</td>\n",
        "      <td>Hotel Posada San Jose</td>\n",
        "      <td>Constitución, Centro, San Pedro Pochutla</td>\n",
-       "      <td>3.8</td>\n",
+       "      <td>3.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1535,7 +1544,7 @@
        "1                                             Rikitea           4.0  \n",
        "2                  RN 33 26 de Abril y, Venado Tuerto           4.7  \n",
        "3                       Rivadavia 2235, Mar del Plata           3.8  \n",
-       "4            Constitución, Centro, San Pedro Pochutla           3.8  \n",
+       "4            Constitución, Centro, San Pedro Pochutla           3.7  \n",
        "5                                               Yendi           2.8  \n",
        "6   Rodovia AL-101 Norte Km 124, s/n - Sitio Carió...           4.7  \n",
        "7   Ayensudo, Elmina. Accra-Takoradi Road at Brenu...           3.1  \n",
@@ -1552,7 +1561,7 @@
        "18    AL-101, KM 138 - N°80 Praia de Peroba, Maragogi           4.5  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1567,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1589,13 +1598,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b69e11a3798465b9e9ccbbecd22bd21",
+       "model_id": "dbfef68dcc054aebab72676104bc610a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1614,7 +1623,7 @@
     "\n",
     "hotel_layer = gmaps.symbol_layer(\n",
     "    locations, fill_color='rgba(0, 150, 0, 0.4)',\n",
-    "    stroke_color='rgba(0, 0, 150, 0.4)', scale=4, info_box_content=hotel_info\n",
+    "    stroke_color='rgba(0, 0, 150, 0.4)', scale=5, info_box_content=hotel_info\n",
     ")\n",
     "\n",
     "fig.add_layer(hotel_layer)\n",
@@ -1622,6 +1631,13 @@
     "fig\n",
     "# Display figure\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
