Add print city index, city name in def get_cities(mincitycount)

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,9 @@
     "    # List for holding lat_lngs and cities\n",
     "    lat_lngs = []\n",
     "    cities = []\n",
-    "\n",
+    "    \n",
+    "    i = 0\n",
+    "    \n",
     "    while (len(cities) < mincitycount):\n",
     "        # Create a set of random lat and lng combinations\n",
     "        lats = np.random.uniform(lat_range[0], lat_range[1], size=1500)\n",
@@ -76,6 +78,9 @@
     "            # If the city is unique, then add it to a our cities list\n",
     "            if city not in cities:\n",
     "                cities.append(city)\n",
+    "                print(f\"Fetching city Index {i} {city}\")\n",
+    "            i += 1\n",
+    "        \n",
     "\n",
     "    return cities;    "
    ]
@@ -221,20 +226,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created: 01-07-2021\n"
+      "Weather data csv file created date: 01-07-2021\n"
      ]
     }
    ],
    "source": [
+    "# get csv file created date\n",
     "file_created_datetime = time.strftime('%m-%d-%Y', time.localtime(os.path.getctime(output_data_file)))\n",
-    "print(\"Created: %s\" % file_created_datetime)"
+    "print(f\"Weather data csv file created date: {file_created_datetime}\")"
    ]
   },
   {
@@ -249,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +482,7 @@
        "[581 rows x 11 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -772,7 +778,7 @@
        "[581 rows x 11 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,10 +808,7 @@
     "temps = clean_weather_df[\"temperature\"]\n",
     "humidity = clean_weather_df[\"humidity\"]\n",
     "cloud = clean_weather_df[\"cloudiness\"]\n",
-    "wind = clean_weather_df[\"wind speed\"]\n",
-    "\n",
-    "\n",
-    "\n"
+    "wind = clean_weather_df[\"wind speed\"]"
    ]
   },
   {
